crates/bijux-domain-fastq/tests/snapshots/bijux-domain-fastq__contracts__stage_contract__fastq_detect_adapters.snap
---
source: crates/bijux-domain-fastq/tests/stage_contract_snapshots.rs
expression: json
---
{
  "inputs": {
    "kind": "SingleEnd"
  },
  "metrics": {
    "classes": [
      "Composition"
    ],
    "invariants": [
      "counts are non-negative",
      "adapter_content in [0, 100]"
    ],
    "notes": "Adapter detection inspects reads and reports adapter signals."
  },
  "outputs": {
    "emits_fastq": false,
    "kind": "StatsOnly"
  },
  "retention": {
    "definition": "reads_out == reads_in; bases_out == bases_in",
    "may_drop": [],
    "may_drop_reads": false,
    "must_preserve_pairing": true,
    "preserves": [
      "reads",
      "pairs",
      "bases"
    ],
    "units": "reads,bases"
  },
  "schema_version": "bijux.stage_contract.v1",
  "stage_id": "fastq.detect_adapters",
  "tool_ids": [
    "fastp"
  ]
}
