crates/bijux-domain-fastq/tests/snapshots/bijux-domain-fastq__contracts__stage_contract__fastq_screen.snap
---
source: crates/bijux-domain-fastq/tests/stage_contract_snapshots.rs
expression: json
---
{
  "inputs": {
    "kind": "SingleEnd"
  },
  "metrics": {
    "classes": [
      "Contamination"
    ],
    "invariants": [
      "contamination_rate in [0, 1]",
      "counts are non-negative"
    ],
    "notes": "Screening reports contamination only."
  },
  "outputs": {
    "emits_fastq": false,
    "kind": "StatsOnly"
  },
  "retention": {
    "definition": "reads_out == reads_in; bases_out == bases_in",
    "may_drop": [],
    "may_drop_reads": false,
    "must_preserve_pairing": true,
    "preserves": [
      "reads",
      "pairs",
      "bases"
    ],
    "units": "reads,bases"
  },
  "schema_version": "bijux.stage_contract.v1",
  "stage_id": "fastq.screen",
  "tool_ids": [
    "kraken2",
    "centrifuge",
    "metaphlan",
    "kaiju",
    "fastq_screen"
  ]
}
