crates/bijux-domain-fastq/tests/snapshots/bijux-domain-fastq__contracts__stage_contract__fastq_stats_neutral.snap
---
source: crates/bijux-domain-fastq/tests/stage_contract_snapshots.rs
expression: json
---
{
  "inputs": {
    "kind": "SingleEnd"
  },
  "metrics": {
    "classes": [
      "Integrity",
      "Composition"
    ],
    "invariants": [
      "mean_q in [0, 45]",
      "gc_percent in [0, 100]"
    ],
    "notes": "Stats is report-only and must not mutate reads."
  },
  "outputs": {
    "emits_fastq": false,
    "kind": "StatsOnly"
  },
  "retention": {
    "definition": "reads_out == reads_in; bases_out == bases_in",
    "may_drop": [],
    "may_drop_reads": false,
    "must_preserve_pairing": true,
    "preserves": [
      "reads",
      "pairs",
      "bases"
    ],
    "units": "reads,bases"
  },
  "schema_version": "bijux.stage_contract.v1",
  "stage_id": "fastq.stats_neutral",
  "tool_ids": [
    "seqkit_stats"
  ]
}
